--- a/src/styles/modules/navbar.module.css
+++ b/src/styles/modules/navbar.module.css
@@ -1,9 +1,9 @@
-.header{
+.header {
     background-color: var(--color_nav_bg);
     width: 100%;
 }
 
-.nav{
+.nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -11,12 +11,12 @@
     /* padding: 15px 40px; */
 }
 
-.left{
+.left {
     display: flex;
     gap: 1rem;
 }
 
-.iconNavbar{
+.iconNavbar {
     font-size: 2rem;
     color: white;
     cursor: pointer;
@@ -24,7 +24,7 @@
     position: relative;
 }
 
-.iconNavbar span{
+.iconNavbar span {
     position: absolute;
     top: -7px;
     right: -6px;
@@ -39,7 +39,7 @@
     color: #fff;
 }
 
-.left a{
+.left a {
     text-decoration: none;
     color: white;
     font-weight: bold;
@@ -49,8 +49,25 @@
     transition: all 0.2s ease;
 }
 
-.container{
+.container {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.flexR {
+    display: flex;
+    gap: 2rem;
+}
+
+.iconLogin {
+    color: #fff;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+}
+
+.titleIcon {
 }
